# aoc-2022

./: .gitignore  README.md  pyproject.toml
day1/: main.py  part1.py  part2.py
day2/: part1.py
