[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["BeeMoe5 <48176165+BeeMoe5@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
