[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["BeeMoe5 <48176165+BeeMoe5@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
